# gen-pair-local

./: .gitignore  Cargo.toml  README.MD  filter-grouping.py  filter.py  k8s.json  output.json  output.txt  requirements.txt  res.json  segmented_text.json  strategy.txt  structs.rs
src/: lib.rs  main.rs
