[package]
name = "gen-pair-local"
version = "0.1.0"
edition = "2021"

# [lib]
# path = "src/lib.rs"
# crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
async-openai = "0.16.2"
chrono = "0.4.31"
csv = "1.3.0"
dotenv = "0.15.0"
futures = "0.3.29"
serde = "1.0.193"
# github-flows = "0.6.0"
# openai-flows = "0.9.1"
# slack-flows = "0.3.4"
# tokio_wasi = {version = "1.25.2", features = ["rt"]}

serde_json = "1"
tokio = { version = "1.25.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
